[gd_scene load_steps=12 format=2]

[ext_resource path="res://Buildings/Building.gd" type="Script" id=1]
[ext_resource path="res://Tools/LifeBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tools/Explosion/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Units/explosion.ogg" type="AudioStream" id=4]
[ext_resource path="res://Tools/Smoker/Smoker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tools/Selection.png" type="Texture" id=6]
[ext_resource path="res://Buildings/building_ready.wav" type="AudioStream" id=7]
[ext_resource path="res://Buildings/unit_ready.wav" type="AudioStream" id=8]
[ext_resource path="res://Buildings/tech_ready.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Building" type="Node2D" groups=[
"Building",
]]
script = ExtResource( 1 )
Explosion = ExtResource( 3 )
sound_explosion = ExtResource( 4 )
sound_building = ExtResource( 7 )
sound_unit = ExtResource( 8 )
sound_tech = ExtResource( 9 )

[node name="Visual" type="Sprite" parent="."]
centered = false
offset = Vector2( -32, -32 )

[node name="SelectionArea" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="SelectionArea"]
shape = SubResource( 1 )

[node name="Smoker" parent="." instance=ExtResource( 5 )]
position = Vector2( -37, 67 )

[node name="Selector" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="LifeBar" parent="." instance=ExtResource( 2 )]

[node name="Repair" type="Timer" parent="."]

[node name="Progress" type="Tween" parent="."]

[node name="Nearby" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Nearby"]
shape = SubResource( 2 )

[node name="Player" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
bus = "Sound"
[connection signal="mouse_entered" from="SelectionArea" to="." method="_on_SelectionArea_mouse_entered"]
[connection signal="mouse_exited" from="SelectionArea" to="." method="_on_SelectionArea_mouse_exited"]
[connection signal="timeout" from="Repair" to="." method="_on_Repair_timeout"]
[connection signal="tween_all_completed" from="Progress" to="." method="_on_Progress_tween_all_completed"]
[connection signal="area_entered" from="Nearby" to="." method="_on_Nearby_area_entered"]
[connection signal="area_exited" from="Nearby" to="." method="_on_Nearby_area_exited"]
